test/types/scalar/bradc/valAsType.good
valAsType.chpl:1: syntax error: near ';'
valAsType.chpl:2: syntax error: near ';'
